# currencypy

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
src/currancypy/: currency_convertor.py  exceptions.py
src/currencypy/: currency_convertor.py  exceptions.py  money.py
tests/: conftest.py  test_conversions.py  test_convert_validation.py  test_convetions.py
