
[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=currencypy"
testpaths = [
    "tests",
]

[mypy]
exclude = [
    "tests",
    "docs",
    "build",
    "dist",
    "venv",
    "currencypy/__init__.py",
    "currencypy/_version.py",
]
