[metadata]
name = currencypy
description = A wrapper for currencylayer API
version = 1.0.0
author = Asanka Perera
license = MIT
license_files = LICENSE
platforms = win32, win64, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
packages =
    currencypy
install_requires =
    python-dotenv>=0.20.0
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0

[options.package_data]
currencypy = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203
